--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -26,3 +26,4 @@ jobs:
           VALIDATE_PYTHON_BLACK: true
           VALIDATE_PYTHON_FLAKE8: true
           VALIDATE_HTML: true
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
