--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -7,11 +7,14 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "node --watch index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
+    "eslint": "^9.30.1",
     "express": "^5.1.0",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0"
