--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -7,9 +7,10 @@
   "type": "commonjs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "test": "node --test",
+    "lint": "eslint ."
   },
   "dependencies": {
     "cors": "^2.8.5",
