--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "eslint": "^9.30.1",
