--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.0.1",
     "eslint": "^9.30.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0"
   },
